# Bazzite-Config

./: .coveragerc  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_v1.5.0.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PACKAGING.md  PROJECT_STATUS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_COMPLETE.md  README.md  RELEASE_NOTES_v1.0.8_SECURITY.md  RELEASE_NOTES_v1.6.0.md  TESTING.md  TESTING_STATUS.md  VALIDATION_FIXES_SUMMARY.md  VERSION  WARP.md  bazzite-optimizer-gui.desktop  bazzite-optimizer-gui.py  bazzite-optimizer.py  gaming-maintenance-suite.sh  gaming-manager-suite.py  gaming-monitor-suite.py  install-gui.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset-bazzite-defaults.sh  undo_bazzite-optimizer.py
.github/: WORKFLOWS_README.md  copilot-instructions.md
.questions/: TEAM_009_egpu_design_decisions.md
.teams/: TEAM_001_refactor_generic_platform_support.md  TEAM_002_review_plan_refactor_generic_platform.md  TEAM_003_review_phase1_plan.md  TEAM_004_implement_phase1_discovery.md  TEAM_005_implement_phase2_platform_abstraction.md  TEAM_006_implement_phase3_migration.md  TEAM_007_review_implementation_phases1-3.md  TEAM_008_investigate_cpu_cores_keyerror.md  TEAM_009_feature_egpu_support.md  TEAM_010_investigate_kernel_security.md  TEAM_011_kernel_edge_cases_and_backup.md  TEAM_012_bugfix_kernel_edge_cases.md  TEAM_013_hardware_abstraction_fix.md  TEAM_014_proactive_bug_investigation.md  TEAM_015_bugfix_hardware_abstraction.md
ai_engine/: __init__.py
amd_support/: amd_gpu_optimizer.py
deployment/: Dockerfile  docker-compose.yml
docs/: API_DOCUMENTATION.md  BOOT_INFRASTRUCTURE_IMPLEMENTATION.md  E2E_TESTING_GUIDE.md  FAQ.md  GUI_ARCHITECTURE.md  GUI_TESTING_CHECKLIST.md  GUI_USER_GUIDE.md  INSTALLATION_GUIDE.md  INSTALLATION_SETUP.md  INTEGRATION_TEST_RESULTS.md  ML_MODEL_TRAINING_GUIDE.md  ML_TRAINING_GUIDE.md  MOBILE_DEPLOYMENT_GUIDE.md  PERFORMANCE_BENCHMARKING.md  RELEASE_NOTES_v1.0.8_SECURITY.md  RELEASE_NOTES_v1.1.0_GUI.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.6.0.md  SCRIPT-V4_COMPLETION.md  SECURITY_HARDENING_GUIDE.md  TECHNICAL_ARCHITECTURE.md  TROUBLESHOOTING.md  USER_GUIDE.md
ml_engine/: __init__.py
mobile-app/: App.tsx  build-android.sh  build-ios.sh  package-lock.json  package.json
mobile_api/: __init__.py  security.py  server.py  websocket_server.py
platform_support/: handheld_extended.py  ubuntu_debian.py
ref_docs/: boot_log.txt  device-info.txt  report-optimal_bazzite-v1.md  report-optimal_bazzite-v2.md
ref_scripts/: bazzite-boot-fixes.py  bazzite-main-integration.py  bazzite-optimizer_Claude-v3.py  bazzite-optimizer_Claude-v4.py  bazzite-optimizer_GPT-5.sh  bazzite-optimizer_Gemini.sh  bazzite-optimizer_Grok.py  bazzite-validate.sh  undo_bazzite-optimizer_v3.py  undo_bazzite-optimizer_v4.py
steamdeck_support/: steamdeck_optimizer.py
tests/: conftest.py  test_bazzite_optimizer_cli_args.py  test_bazzite_optimizer_core_utils.py  test_bazzite_optimizer_enhanced_kargs.py  test_hardware_detection.py  (+2 more)
(+136 files in other folders)
