[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bazzite-gaming-optimization-suite"
version = "1.0.4"
description = "Professional gaming system optimization, monitoring, and maintenance suite for Bazzite Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bazzite Gaming Optimization Suite", email = "noreply@github.com"}
]
maintainers = [
    {name = "Bazzite Gaming Optimization Suite", email = "noreply@github.com"}
]
keywords = ["bazzite", "gaming", "optimization", "linux", "performance", "nvidia", "intel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
    "pytest>=6.0",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/doublegate/Bazzite-Config"
Repository = "https://github.com/doublegate/Bazzite-Config.git"
Issues = "https://github.com/doublegate/Bazzite-Config/issues"
Changelog = "https://github.com/doublegate/Bazzite-Config/blob/main/CHANGELOG.md"
Documentation = "https://github.com/doublegate/Bazzite-Config/tree/main/docs"

[project.scripts]
bazzite-optimizer = "bazzite_optimizer:main"

[tool.setuptools]
py-modules = ["bazzite_optimizer"]

[tool.setuptools.package-data]
"*" = ["VERSION", "README.md", "CHANGELOG.md"]

# PyInstaller configuration for builds
[tool.pyinstaller]
name = "bazzite-optimizer"
console = true
onefile = true
strip = true
upx = true
runtime-hook = []
hidden-imports = [
    "psutil",
    "threading", 
    "re",
    "platform",
    "subprocess",
    "json",
    "tempfile",
    "hashlib",
    "statistics",
    "signal",
    "os",
    "sys",
]
add-data = [
    "VERSION:.",
    "README.md:.",
    "CHANGELOG.md:.",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "dist", "build", ".eggs"]